--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -5,11 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/btn_last_year"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="LAST YEAR" />
+
+        <Button
+            android:id="@+id/btn_last_month"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="LAST MONTH" />
+
+        <Button
+            android:id="@+id/btn_last_week"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="LAST WEEK" />
+    </LinearLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fragment_history_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"/>
+        android:layout_width="368dp"
+        android:layout_height="400dp"
+        app:layout_constraintTop_toBottomOf="@+id/tab_layout"
+        tools:layout_editor_absoluteX="8dp" />
 </android.support.constraint.ConstraintLayout>
