--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -16,22 +16,17 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/btn_last_year"
+            android:id="@+id/btn_expense"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="LAST YEAR" />
+            android:text="Expense" />
 
         <Button
-            android:id="@+id/btn_last_month"
+            android:id="@+id/btn_income"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="LAST MONTH" />
+            android:text="Income" />
 
-        <Button
-            android:id="@+id/btn_last_week"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="LAST WEEK" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
