--- a/app/src/main/res/layout/recycleview_item.xml
+++ b/app/src/main/res/layout/recycleview_item.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="75dp"
+    android:id="@+id/layout_item"
+    android:background="?attr/selectableItemBackground"
     tools:layout_editor_absoluteY="81dp">
 
     <ImageView
