--- a/app/src/main/res/layout/recycleview_date.xml
+++ b/app/src/main/res/layout/recycleview_date.xml
@@ -9,11 +9,12 @@
         android:id="@+id/recycleview_date"
         android:layout_width="match_parent"
         android:layout_height="24dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="5dp"
         android:text="2017/11/09"
         android:textSize="20sp"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginStart="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
