--- a/app/src/main/res/layout/recycleview_clockcard.xml
+++ b/app/src/main/res/layout/recycleview_clockcard.xml
@@ -10,6 +10,7 @@
     android:layout_marginEnd="5dp"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
+    android:background="?attr/selectableItemBackground"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
